--- a/src/styles/pages/_myApproach.scss
+++ b/src/styles/pages/_myApproach.scss
@@ -1,4 +1,5 @@
 .approach {
+  overflow: hidden;
   &__title {
     box-shadow: $boxShadow;
   }
